--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.8-slim-buster
 WORKDIR /app
-COPY requirements.txt /app
+COPY requirements.txt .
 RUN python -m pip install -r requirements.txt
 COPY . /app
 EXPOSE 5000
