--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
         uses: docker/build-push-action@v2.6.1
         with:
           context: ./
-          file: ./Dockerfile
+          file: ./src/Dockerfile
           push: true
           tags: |
             dellodello/conversao-temperatura:latest
